# cognitive-automobile-laboratory

./: README.md
src/demo_image_processing_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/demo_image_processing_ros_tool/cfg/: PylonDetector.mrtcfg
src/demo_image_processing_ros_tool/launch/: pylon_detector_offline.launch  pylon_detector_online.launch
src/demo_image_processing_ros_tool/res/: pylon_detector.rviz
src/demo_image_processing_ros_tool/test/: pylon_detector_node.cpp  pylon_detector_node.test  pylon_detector_nodelet.cpp  pylon_detector_nodelet.test
src/generic_logger/: CMakeLists.txt  Doxyfile  README.md  package.xml
src/generic_logger/test/: test_generic_logger.cpp
src/image_preproc_ros_tool/: .gitlab-ci.yml  CMakeLists.txt  nodelet_plugins.xml  package.xml
src/image_preproc_ros_tool/cfg/: Disp2pointcloud.rosif  GammaCorrection.cfg  LabelDilation.rosif  Resize.rosif
src/image_preproc_ros_tool/launch/: disp2pointcloud_node.launch  disp2pointcloud_nodelet.launch  gamma_correction_node.launch  gamma_correction_nodelet.launch  label_dilation_node.launch  label_dilation_nodelet.launch
src/image_preproc_ros_tool/test/: disp2pointcloud_node.cpp  disp2pointcloud_node.test  disp2pointcloud_nodelet.cpp  disp2pointcloud_nodelet.test  label_dilation_node.cpp  label_dilation_node.test  label_dilation_nodelet.cpp  label_dilation_nodelet.test
src/iowkit/: CMakeLists.txt  README.md  package.xml
src/iowkit/include/: iowkit.h
src/iowkit/src/: iowarrior.h  iowkit.c
src/joy_converter_ros_tool/: CMakeLists.txt  README.md  package.xml
src/joy_converter_ros_tool/launch/: joystick.launch
src/joy_converter_ros_tool/src/: Joy2MotorCommandConverter.cpp  Joy2MotorCommandConverter.h  Joy2MotorCommandConverter_node.cpp
src/kal/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
src/kal/launch/: demo_path_follower.launch  kinect.launch  master_live.launch  master_offline.launch  play_bag.launch  record_all_sensors.launch
src/kitaf/: CMakeLists.txt  README.md  package.xml
src/kitaf/launch/: additional_task_offline.launch  additional_task_online.launch  basic_task_offline.launch  basic_task_online.launch
src/kitaf/res/: anicar.urdf
src/kitaf/scripts/: install_python.sh  launch_anicar_detection.sh  launch_sign_detection.sh
src/kitaf_detector_ros_tool/: CMakeLists.txt  README.md  package.xml
src/kitaf_detector_ros_tool/cfg/: AnicarDetector.rosif  KitafDetector.rosif
src/kitaf_detector_ros_tool/launch/: anicar_detector_node.launch  kitaf_detector_node.launch
src/kitaf_detector_ros_tool/scripts/: anicar_detector_node.py  kitaf_detector_node.py
src/kitaf_detector_ros_tool/test/: anicar_detector_test.py  anicar_detector_test.test  kitaf_detector_test.py  kitaf_detector_test.test
src/kitaf_following_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/kitaf_following_ros_tool/cfg/: KitafFollower.rosif
src/kitaf_following_ros_tool/launch/: kitaf_follower_node.launch  kitaf_follower_nodelet.launch
src/kitaf_following_ros_tool/test/: kitaf_follower_node.cpp  kitaf_follower_node.test  kitaf_follower_nodelet.cpp  kitaf_follower_nodelet.test
src/kitaf_utils_ros/: CMakeLists.txt  README.md  package.xml
src/kitaf_utils_ros/msg/: MotorState.msg
src/kitaf_utils_ros/src/: geometry.cpp
src/kitaf_utils_ros/srv/: SwitchToExit.srv
src/kitaf_utils_ros/test/: kitaf_utils_ros.test
src/lateral_control_ros_tool/: .gitlab-ci.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/lateral_control_ros_tool/cfg/: LateralController.params
src/lateral_control_ros_tool/launch/: lateral_controller_node.launch  lateral_controller_nodelet.launch
src/lateral_control_ros_tool/test/: lateral_controller_node.cpp  lateral_controller_node.test  lateral_controller_nodelet.cpp  lateral_controller_nodelet.test
src/longitudinal_control_ros_tool/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/longitudinal_control_ros_tool/cfg/: LongitudinalController.params
src/longitudinal_control_ros_tool/launch/: longitudinal_controller_node.launch  longitudinal_controller_nodelet.launch
src/longitudinal_control_ros_tool/test/: longitudinal_controller_node.cpp  longitudinal_controller_node.test  longitudinal_controller_nodelet.cpp  longitudinal_controller_nodelet.test  test_discrete_curvature.cpp
src/map_creation_ros_tool/: .gitlab-ci.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/map_creation_ros_tool/cfg/: MapCreation.rosif
src/map_creation_ros_tool/launch/: map_creation_node.launch  map_creation_nodelet.launch
src/map_creation_ros_tool/test/: map_creation_node.cpp  map_creation_node.test  map_creation_nodelet.cpp  map_creation_nodelet.test
src/motor_interface/: CMakeLists.txt  README.md  package.xml
src/motor_interface/res/: 90-io-warrior.rules
src/motor_interface/src/: EPOS.cpp  IOWarriorIIC.cpp
src/motor_interface_ros_tool/: CMakeLists.txt  README.md  package.xml
src/motor_interface_ros_tool/launch/: motor_interface_node.launch
src/motor_interface_ros_tool/msg/: MotorCommand.msg  ServoCommand.msg
src/motor_interface_ros_tool/srv/: Activation.srv
src/mrt_cv_bridge_ros/: CMakeLists.txt  package.xml
src/mrt_cv_bridge_ros/src/: cv_bridge.cpp
src/path_provider_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/prosilica_driver/: .gitignore  CMakeLists.txt  README.md  package.xml  prosilica.launch  streaming.launch
src/prosilica_gige_sdk/: CMakeLists.txt  package.xml
src/rosinterface_handler/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  setup.py
src/rosparam_handler/: .gitlab-ci.yml  CMakeLists.txt  package.xml
src/simulation_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/stargazer_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/tui_ros_tool/: CMakeLists.txt  README.md  package.xml
src/util_testing_ros/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
src/utils_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
(+361 files in other folders)
