<?xml version="1.0"?>
<package format="2">
  <name>joy_converter_ros_tool</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>GPLv3</license>
  <maintainer email="wechtc@gmail.com">wechtc@gmail.com</maintainer>
  <author email="wechtc@gmail.com">wechtc@gmail.com</author>
  <url type="repository">git@gitlab.mrt.uni-karlsruhe.de:kognitive_automobile_labor/joy_converter_ros_tool.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>utils_ros</depend>
  <depend>motor_interface_ros_tool</depend>
  <depend>joy</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
