<?xml version="1.0"?>
<package format="2">
  <name>kitaf</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>contact-the-maintainer</license>
  <maintainer email="chen.kuangye@gmail.com">Kuangye Chen</maintainer>
  <author email="chen.kuangye@gmail.com">Kuangye Chen</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/kal3/kitaf</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->
  <depend>kal</depend>
  <depend>kitaf_detector_ros_tool</depend>
  <depend>kitaf_navigation_ros_tool</depend>
  <depend>kitaf_lateral_control_ros_tool</depend>
  <depend>kitaf_utils_ros</depend>
  <depend>map_creation_ros_tool</depend>
  <depend>kitaf_following_ros_tool</depend>
  <depend>kinect2_bridge</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
