<package format="2">
  <name>simulation_ros_tool</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>contact-the-maintainer</license>
  <maintainer email="wechtc@gmail.com">wechtc@gmail.com</maintainer>
  <author email="wechtc@gmail.com">wechtc@gmail.com</author>
  <url type="repository">git@gitlab.mrt.uni-karlsruhe.de:kognitive_automobile_labor/simulation_ros_tool.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>rosparam_handler</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>utils_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>motor_interface_ros_tool</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" /><!-- Other tools can request additional information be placed here -->
  </export>
</package>
